[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Scenes/Views/ImageView/ImageViewCover.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/Views/ImageView/ImageViewHeader.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scenes/Views/ImageView/ImageView.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=3]

[node name="ImageView" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 4 )

[node name="FadingBackground" type="PanelContainer" parent="."]
margin_right = 1120.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1120.0
margin_bottom = 600.0
custom_constants/separation = 0
alignment = 1

[node name="LeftEmpty" type="Control" parent="HBoxContainer"]
margin_right = 20.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="ImageViewCover" parent="HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 380.0
margin_bottom = 600.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="OptionController" type="MarginContainer" parent="HBoxContainer"]
margin_left = 380.0
margin_right = 1120.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="OptionBg" type="PanelContainer" parent="HBoxContainer/OptionController"]
margin_left = 10.0
margin_top = 10.0
margin_right = 730.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/OptionController/OptionBg"]
margin_right = 720.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ImageViewHeader" parent="HBoxContainer/OptionController/OptionBg/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 720.0
margin_bottom = 40.0

[node name="OptionContainer" type="MarginContainer" parent="HBoxContainer/OptionController/OptionBg/VBoxContainer"]
margin_top = 48.0
margin_right = 720.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="resized" from="." to="." method="_on_NewImageView_resized"]
